html update: 'alt' attribute

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             Player <span id="pscore">0</span> - <span id="cscore">0</span> Computer
         </h3>
         <div class="action">
-            <input class="options scissors-b" type="image" src="./img/scissors.png" value="Scissors" />
-            <input class="options rock" type="image" src="./img/Rock.png" value="Rock" />
-            <input class="options paper" type="image" src="./img/paper.png" value="Paper" />
+            <input class="options scissors-b" type="image" src="./img/scissors.png" value="Scissors" alt="scissors" />
+            <input class="options rock" type="image" src="./img/Rock.png" value="Rock" alt="rock"/>
+            <input class="options paper" type="image" src="./img/paper.png" value="Paper" alt="paper" />
         </div>
 
     </main>
